feat(client): 添加常见语句代码片段